<resources>
    <string name="app_name">SI Informer</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_enable_content_update">Enable content update in background</string>
    <string name="pref_description_enable_content_update">Enables content update in background</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="multi_select_list_preference_title">
        <item>Text</item>
        <item>FB2</item>
        <item>HTML</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_updates_notifications">Updates notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_update_setting_title">Update Setting</string>
    <string name="pref_storage_setting_title">Content storage settings</string>
    <string name="pref_storage_save_opened_content">Save opened content locally</string>
    <string name="pref_update_frequency">Update frequency in minutes</string>
    <string name="prefs_saved_content_format">Saved content format</string>
    <string name="prefs_general_title">General</string>
    <string name="prefs_general_use_embedded_reader">Use embedded reader</string>
    <string name="prefs_update_only_on_wifi">Update only though WiFi</string>
    <string name="menu_settings">Setting</string>
    <string name="menu_add_author">Add Author</string>
    <string name="search_hint">Add Author\'s full name or direct link to Author\'s page</string>
    <string name="space" translatable="false"></string>
</resources>
